wip sort by price and mileage

--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
             <select class="offers__sort-type" id="sort-type">
               <option class="offers__sort-item" value="">Publication date (ascending)</option>
               <option class="offers__sort-item" value="price-asc">Price (ascending)</option>
-              <option class="offers__sort-item" value="price-des">Price (descending)</option>
+              <option class="offers__sort-item" value="price-desc">Price (descending)</option>
               <option class="offers__sort-item" value="mile-asc">Mileage (ascending)</option>
-              <option class="offers__sort-item" value="mile-des">Mileage (descending)</option>
+              <option class="offers__sort-item" value="mile-desc">Mileage (descending)</option>
               <option class="offers__sort-item" value="">Performance (ascending)</option>
               <option class="offers__sort-item" value="">Performance (descending)</option>
             </select>
@@ -159,7 +159,7 @@
 
         <div class="offers__products">
           <div class="card card__item" data-year="2019" data-mile="19855"
-            data-make="volkswagen">
+            data-make="volkswagen" data-price="34888">
             <div class="card__item-block">
               <img src="img/tiguan.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -180,7 +180,7 @@
           </div>
 
           <div class="card card__item" data-year="2014" data-mile="69000"
-          data-make="toyota">
+          data-make="toyota" data-price="27875">
             <div class="card__item-block card__wrap-new">
               <img src="img/highlander-xle.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -201,7 +201,7 @@
           </div>
 
           <div class="card card__item" data-year="2017" data-mile="39850"
-          data-make="lexus">
+          data-make="lexus" data-price="38775">
             <div class="card__item-block">
               <img src="img/rx-350-sport.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -222,7 +222,7 @@
           </div>
 
           <div class="card card__item" data-year="2016" data-mile="104000"
-          data-make="toyota">
+          data-make="toyota" data-price="23728">
             <div class="card__item-block">
               <img src="img/highlander-xle.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -243,7 +243,7 @@
           </div>
 
           <div class="card card__item" data-year="2017" data-mile="95000"
-          data-make="hyundai">
+          data-make="hyundai" data-price="11788">
             <div class="card__item-block">
               <img src="img/elantra.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -264,7 +264,7 @@
           </div>
 
           <div class="card card__item" data-year="2019" data-mile="59800"
-          data-make="mercedes">
+          data-make="mercedes" data-price="38878">
             <div class="card__item-block">
               <img src="img/gle.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -285,7 +285,7 @@
           </div>
 
           <div class="card card__item" data-year="2019" data-mile="99000"
-          data-make="toyota">
+          data-make="toyota" data-price="18620">
             <div class="card__item-block card__wrap-sold">
               <img src="img/venza-sold.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -306,7 +306,7 @@
           </div>
 
           <div class="card card__item" data-year="2016" data-mile="86000"
-          data-make="lexus">
+          data-make="lexus" data-price="34888">
             <div class="card__item-block card__wrap-new">
               <img src="img/rx-350-sport.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -327,7 +327,7 @@
           </div>
 
           <div class="card card__item" data-year="2019" data-mile="19855"
-          data-make="volkswagen">
+          data-make="volkswagen" data-price="34888">
             <div class="card__item-block">
               <img src="img/tiguan.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -348,7 +348,7 @@
           </div>
 
           <div class="card card__item" data-year="2014" data-mile="69000"
-          data-make="toyota">
+          data-make="toyota" data-price="27875">
             <div class="card__item-block">
               <img src="img/highlander-xle.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -369,7 +369,7 @@
           </div>
 
           <div class="card card__item" data-year="2017" data-mile="39850"
-          data-make="lexus">
+          data-make="lexus" data-price="38775">
             <div class="card__item-block">
               <img src="img/highlander-xle.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -390,7 +390,7 @@
           </div>
 
           <div class="card card__item" data-year="2016" data-mile="104000"
-          data-make="toyota">
+          data-make="toyota" data-price="23728">
             <div class="card__item-block">
               <img src="img/highlander-xle.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -411,7 +411,7 @@
           </div>
 
           <div class="card card__item" data-year="2019" data-mile="19855"
-          data-make="volkswagen">
+          data-make="volkswagen" data-price="34888">
             <div class="card__item-block card__wrap-new">
               <img src="img/tiguan.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -432,7 +432,7 @@
           </div>
 
           <div class="card card__item" data-year="2014" data-mile="69000"
-          data-make="toyota">
+          data-make="toyota" data-price="27875">
             <div class="card__item-block">
               <img src="img/highlander-xle.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -453,7 +453,7 @@
           </div>
 
           <div class="card card__item" data-year="2017" data-mile="39850"
-          data-make="lexus">
+          data-make="lexus" data-price="38775">
             <div class="card__item-block">
               <img src="img/highlander-xle.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -474,7 +474,7 @@
           </div>
 
           <div class="card card__item" data-year="2016" data-mile="104000"
-          data-make="toyota">
+          data-make="toyota" data-price="23728">
             <div class="card__item-block">
               <img src="img/highlander-xle.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -495,7 +495,7 @@
           </div>
 
           <div class="card card__item" data-year="2017" data-mile="95000"
-          data-make="hyundai">
+          data-make="hyundai" data-price="11788">
             <div class="card__item-block">
               <img src="img/elantra.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -516,7 +516,7 @@
           </div>
 
           <div class="card card__item" data-year="2016" data-mile="59800"
-          data-make="mercedes">
+          data-make="mercedes" data-price="38878">
             <div class="card__item-block">
               <img src="img/gle.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -537,7 +537,7 @@
           </div>
 
           <div class="card card__item" data-year="2015" data-mile="99000"
-          data-make="toyota">
+          data-make="toyota"  data-price="18620">
             <div class="card__item-block">
               <img src="img/venza.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -558,7 +558,7 @@
           </div>
 
           <div class="card card__item" data-year="2016" data-mile="86000"
-          data-make="lexus">
+          data-make="lexus"  data-price="34888">
             <div class="card__item-block card__wrap-new">
               <img src="img/rx-350-sport.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -579,7 +579,7 @@
           </div>
 
           <div class="card card__item" data-year="2019" data-mile="19855"
-          data-make="volkswagen">
+          data-make="volkswagen" data-price="34888">
             <div class="card__item-block">
               <img src="img/tiguan.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -600,7 +600,7 @@
           </div>
 
           <div class="card card__item" data-year="2014" data-mile="69000"
-          data-make="toyota">
+          data-make="toyota" data-price="27875">
             <div class="card__item-block">
               <img src="img/highlander-xle.png" class="img-fluid card__item-img" alt="car10">
             </div>
