--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
               <option class="offers__sort-item" value="price-desc">Price (descending)</option>
               <option class="offers__sort-item" value="mile-asc">Mileage (ascending)</option>
               <option class="offers__sort-item" value="mile-desc">Mileage (descending)</option>
-              <option class="offers__sort-item" value="">Performance (ascending)</option>
-              <option class="offers__sort-item" value="">Performance (descending)</option>
+              <option class="offers__sort-item" value="perf-asc">Performance (ascending)</option>
+              <option class="offers__sort-item" value="perf-desc">Performance (descending)</option>
             </select>
           </div>
         </div>
