--- a/index.html
+++ b/index.html
@@ -113,13 +113,14 @@
               <option class="form-option" value="gle">GLE-Class</option>
               <option class="form-option" value="venza">Venza</option>
             </select>
-            <select class="form__select" aria-label="Default select">
-              <option class="form-option" selected>Trim</option>
-              <option class="form-option" value="1">Basic</option>
-              <option class="form-option" value="2">XLE</option>
-              <option class="form-option" value="3">LE AWD</option>
-              <option class="form-option" value="3">AWD XLE</option>
-              <option class="form-option" value="3">F-SPORT</option>
+            <select class="form__select"  id="car-trim" aria-label="Default select">
+              <option class="form-option" value="" selected>Trim</option>
+              <option class="form-option" value="basic">Basic</option>
+              <option class="form-option" value="xle">XLE</option>
+              <option class="form-option" value="leawd">LE AWD</option>
+              <option class="form-option" value="luxury">Luxury</option>
+              <option class="form-option" value="awdxle">AWD XLE</option>
+              <option class="form-option" value="fsport">F-SPORT</option>
             </select>
             <select class="form__select" id="car-mileage" aria-label="Default select">
               <option class="form-option" value="" selected>Mileage</option>
@@ -158,7 +159,7 @@
 
         <div class="offers__products">
           <div class="card card__item" data-year="2019" data-mile="19855"
-            data-make="volkswagen" data-model="tiguan" data-price="34888">
+            data-make="volkswagen" data-model="tiguan" data-trim="basic" data-price="34888">
             <div class="card__item-block">
               <img src="img/tiguan.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -179,7 +180,7 @@
           </div>
 
           <div class="card card__item" data-year="2014" data-mile="69000"
-          data-make="toyota"  data-model="highlander" data-price="27875">
+          data-make="toyota"  data-model="highlander" data-trim="xle"  data-price="27875">
             <div class="card__item-block card__wrap-new">
               <img src="img/highlander-xle.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -200,7 +201,7 @@
           </div>
 
           <div class="card card__item" data-year="2017" data-mile="39850"
-          data-make="lexus" data-model="rx350" data-price="38775">
+          data-make="lexus" data-model="rx350" data-trim="luxury"  data-price="38775">
             <div class="card__item-block">
               <img src="img/rx-350-sport.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -221,7 +222,7 @@
           </div>
 
           <div class="card card__item" data-year="2016" data-mile="104000"
-          data-make="toyota" data-model="highlander" data-price="23728">
+          data-make="toyota" data-model="highlander" data-trim="leawd"  data-price="23728">
             <div class="card__item-block">
               <img src="img/highlander-xle.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -242,7 +243,7 @@
           </div>
 
           <div class="card card__item" data-year="2017" data-mile="95000"
-          data-make="hyundai"  data-model="elantra" data-price="11788">
+          data-make="hyundai"  data-model="elantra" data-trim="basic" data-price="11788">
             <div class="card__item-block">
               <img src="img/elantra.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -263,7 +264,7 @@
           </div>
 
           <div class="card card__item" data-year="2019" data-mile="59800"
-          data-make="mercedes" data-model="gle" data-price="38878">
+          data-make="mercedes" data-model="gle" data-trim="basic"  data-price="38878">
             <div class="card__item-block">
               <img src="img/gle.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -284,7 +285,7 @@
           </div>
 
           <div class="card card__item" data-year="2019" data-mile="99000"
-          data-make="toyota"  data-model="venza" data-price="18620">
+          data-make="toyota"  data-model="venza" data-trim="awdxle" data-price="18620">
             <div class="card__item-block card__wrap-sold">
               <img src="img/venza-sold.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -305,7 +306,7 @@
           </div>
 
           <div class="card card__item" data-year="2016" data-mile="86000"
-          data-make="lexus" data-model="rx350" data-price="34888">
+          data-make="lexus" data-model="rx350" data-trim="fsport" data-price="34888">
             <div class="card__item-block card__wrap-new">
               <img src="img/rx-350-sport.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -326,7 +327,7 @@
           </div>
 
           <div class="card card__item" data-year="2019" data-mile="19855"
-          data-make="volkswagen" data-model="tiguan" data-price="34888">
+          data-make="volkswagen" data-model="tiguan" data-trim="basic" data-price="34888">
             <div class="card__item-block">
               <img src="img/tiguan.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -347,7 +348,7 @@
           </div>
 
           <div class="card card__item" data-year="2014" data-mile="69000"
-          data-make="toyota" data-model="highlander" data-price="27875">
+          data-make="toyota" data-model="highlander" data-trim="xle" data-price="27875">
             <div class="card__item-block">
               <img src="img/highlander-xle.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -368,7 +369,7 @@
           </div>
 
           <div class="card card__item" data-year="2017" data-mile="39850"
-          data-make="lexus" data-model="rx350" data-price="38775">
+          data-make="lexus" data-model="rx350" data-trim="luxury" data-price="38775">
             <div class="card__item-block">
               <img src="img/highlander-xle.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -389,7 +390,7 @@
           </div>
 
           <div class="card card__item" data-year="2016" data-mile="104000"
-          data-make="toyota" data-model="highlander" data-price="23728">
+          data-make="toyota" data-model="highlander" data-trim="leawd" data-price="23728">
             <div class="card__item-block">
               <img src="img/highlander-xle.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -410,7 +411,7 @@
           </div>
 
           <div class="card card__item" data-year="2019" data-mile="19855"
-          data-make="volkswagen" data-model="tiguan" data-price="34888">
+          data-make="volkswagen" data-model="tiguan" data-trim="basic"  data-price="34888">
             <div class="card__item-block card__wrap-new">
               <img src="img/tiguan.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -431,7 +432,7 @@
           </div>
 
           <div class="card card__item" data-year="2014" data-mile="69000"
-          data-make="toyota"  data-model="highlander" data-price="27875">
+          data-make="toyota"  data-model="highlander" data-trim="xle" data-price="27875">
             <div class="card__item-block">
               <img src="img/highlander-xle.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -452,7 +453,7 @@
           </div>
 
           <div class="card card__item" data-year="2017" data-mile="39850"
-          data-make="lexus" data-model="rx350" data-price="38775">
+          data-make="lexus" data-model="rx350" data-trim="luxury" data-price="38775">
             <div class="card__item-block">
               <img src="img/highlander-xle.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -473,7 +474,7 @@
           </div>
 
           <div class="card card__item" data-year="2016" data-mile="104000"
-          data-make="toyota" data-model="highlander" data-price="23728">
+          data-make="toyota" data-model="highlander" data-trim="leawd" data-price="23728">
             <div class="card__item-block">
               <img src="img/highlander-xle.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -494,7 +495,7 @@
           </div>
 
           <div class="card card__item" data-year="2017" data-mile="95000"
-          data-make="hyundai" data-model="elantra" data-price="11788">
+          data-make="hyundai" data-model="elantra" data-trim="basic" data-price="11788">
             <div class="card__item-block">
               <img src="img/elantra.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -515,7 +516,7 @@
           </div>
 
           <div class="card card__item" data-year="2016" data-mile="59800"
-          data-make="mercedes" data-model="gle" data-price="38878">
+          data-make="mercedes" data-model="gle" data-trim="basic" data-price="38878">
             <div class="card__item-block">
               <img src="img/gle.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -536,7 +537,7 @@
           </div>
 
           <div class="card card__item" data-year="2015" data-mile="99000"
-          data-make="toyota" data-model="venza"  data-price="18620">
+          data-make="toyota" data-model="venza" data-trim="awdxle" data-price="18620">
             <div class="card__item-block">
               <img src="img/venza.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -557,7 +558,7 @@
           </div>
 
           <div class="card card__item" data-year="2016" data-mile="86000"
-          data-make="lexus"  data-model="rx350" data-price="34888">
+          data-make="lexus"  data-model="rx350" data-trim="fsport" data-price="34888">
             <div class="card__item-block card__wrap-new">
               <img src="img/rx-350-sport.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -578,7 +579,7 @@
           </div>
 
           <div class="card card__item" data-year="2019" data-mile="19855"
-          data-make="volkswagen" data-model="tiguan" data-price="34888">
+          data-make="volkswagen" data-model="tiguan" data-trim="basic" data-price="34888">
             <div class="card__item-block">
               <img src="img/tiguan.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -599,7 +600,7 @@
           </div>
 
           <div class="card card__item" data-year="2014" data-mile="69000"
-          data-make="toyota"  data-model="highlander" data-price="27875">
+          data-make="toyota"  data-model="highlander" data-trim="xle" data-price="27875">
             <div class="card__item-block">
               <img src="img/highlander-xle.png" class="img-fluid card__item-img" alt="car10">
             </div>
