--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </div>
         <div class="offers__settings">
           <div class="form__check">
-            <input type="checkbox" class="form__check-input" id="validationFormCheck">
+            <input type="checkbox"  class="form__check-input" id="validationFormCheck">
             <label class="form__check-label" for="validationFormCheck">Instantly available vehicles</label>
           </div>
           <div class="offers__sort">
@@ -284,7 +284,7 @@
             </div>
           </div>
 
-          <div class="card card__item" data-year="2019" data-mile="99000"
+          <div class="card card__item car__sold" data-year="2019" data-mile="99000"
           data-make="toyota"  data-model="venza" data-trim="awdxle" data-price="18620">
             <div class="card__item-block card__wrap-sold">
               <img src="img/venza-sold.png" class="img-fluid card__item-img" alt="car10">
