--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
@@ -142,8 +143,8 @@
               Sort by
             </button>
             <div class="sort__arrows">
-              <img src="img/arrow-up.png" alt="arrow-up">
-              <img src="img/arrow-up.png" alt="arrow-up">
+              <span class="arrow__up"></span>
+              <span class="arrow__down"></span>
             </div>
             <select class="offers__sort-type" id="sort-type">
               <option class="offers__sort-item" value="">Publication date (ascending)</option>
