--- a/index.html
+++ b/index.html
@@ -10,13 +10,8 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
   <title>Document</title>
-  <script defer src="js/script.js"></script>
 </head>
 
 <body>
@@ -61,7 +56,7 @@
             <i class="closeIcon material-icons">close</i>
           </button>
         </div>
-        
+
 
       </div>
 
@@ -88,7 +83,7 @@
       <div class="row">
         <h2 class="col-12 text-center offers__title">Current offers</h2>
         <div class="offers__filters">
-          <form action="" class="offers__menu">
+          <form action="#" class="offers__menu">
             <select class="form__select" id="car-year" aria-label="Default select">
               <option class="form-option" value="" selected>Year</option>
               <option class="form-option" value="2014">2014</option>
@@ -105,7 +100,7 @@
               <option class="form-option" value="hyundai">Hyundai</option>
               <option class="form-option" value="mercedes">Mercedes-Benz</option>
             </select>
-            <select class="form__select"  id="car-model" aria-label="Default select">
+            <select class="form__select" id="car-model" aria-label="Default select">
               <option class="form-option" value="" selected>Model</option>
               <option class="form-option" value="tiguan">Tiguan</option>
               <option class="form-option" value="highlander">Highlander</option>
@@ -114,7 +109,7 @@
               <option class="form-option" value="gle">GLE-Class</option>
               <option class="form-option" value="venza">Venza</option>
             </select>
-            <select class="form__select"  id="car-trim" aria-label="Default select">
+            <select class="form__select" id="car-trim" aria-label="Default select">
               <option class="form-option" value="" selected>Trim</option>
               <option class="form-option" value="basic">Basic</option>
               <option class="form-option" value="xle">XLE</option>
@@ -130,12 +125,12 @@
               <option class="form-option" value="90000">&lt;90 000 km</option>
               <option class="form-option" value="120000">&lt;120 000 km</option>
             </select>
-            <button type="button" class="offers__btn">40 cars</button>
+            <button type="button" class="car__quantity-btn">40 cars</button>
           </form>
         </div>
         <div class="offers__settings">
           <div class="form__check">
-            <input type="checkbox"  class="form__check-input" id="validationFormCheck">
+            <input type="checkbox" class="form__check-input" id="validationFormCheck">
             <label class="form__check-label" for="validationFormCheck">Instantly available vehicles</label>
           </div>
           <div class="offers__sort">
@@ -159,15 +154,15 @@
         </div>
 
         <div class="offers__products">
-          <div class="card card__item" data-year="2019" data-mile="19855"
-            data-make="volkswagen" data-model="tiguan" data-trim="basic" data-price="34888">
+          <div class="card card__item" data-year="2019" data-mile="19855" data-make="volkswagen" data-model="tiguan"
+            data-trim="basic" data-price="34888">
             <div class="card__item-block">
               <img src="img/tiguan.png" class="img-fluid card__item-img" alt="car10">
             </div>
             <div class="card__item-info">
               <h3 class="card__item-title">
                 <span class="card__item-year">2019</span>
-                 Volkswagen Tiguan
+                Volkswagen Tiguan
               </h3>
 
               <div class="mt-3 card__item-details">
@@ -180,8 +175,8 @@
             </div>
           </div>
 
-          <div class="card card__item" data-year="2014" data-mile="69000"
-          data-make="toyota"  data-model="highlander" data-trim="xle"  data-price="27875">
+          <div class="card card__item" data-year="2014" data-mile="69000" data-make="toyota" data-model="highlander"
+            data-trim="xle" data-price="27875">
             <div class="card__item-block card__wrap-new">
               <img src="img/highlander-xle.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -201,8 +196,8 @@
             </div>
           </div>
 
-          <div class="card card__item" data-year="2017" data-mile="39850"
-          data-make="lexus" data-model="rx350" data-trim="luxury"  data-price="38775">
+          <div class="card card__item" data-year="2017" data-mile="39850" data-make="lexus" data-model="rx350"
+            data-trim="luxury" data-price="38775">
             <div class="card__item-block">
               <img src="img/rx-350-sport.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -222,8 +217,8 @@
             </div>
           </div>
 
-          <div class="card card__item" data-year="2016" data-mile="104000"
-          data-make="toyota" data-model="highlander" data-trim="leawd"  data-price="23728">
+          <div class="card card__item" data-year="2016" data-mile="104000" data-make="toyota" data-model="highlander"
+            data-trim="leawd" data-price="23728">
             <div class="card__item-block">
               <img src="img/highlander-xle.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -243,8 +238,8 @@
             </div>
           </div>
 
-          <div class="card card__item" data-year="2017" data-mile="95000"
-          data-make="hyundai"  data-model="elantra" data-trim="basic" data-price="11788">
+          <div class="card card__item" data-year="2017" data-mile="95000" data-make="hyundai" data-model="elantra"
+            data-trim="basic" data-price="11788">
             <div class="card__item-block">
               <img src="img/elantra.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -264,8 +259,8 @@
             </div>
           </div>
 
-          <div class="card card__item" data-year="2019" data-mile="59800"
-          data-make="mercedes" data-model="gle" data-trim="basic"  data-price="38878">
+          <div class="card card__item" data-year="2019" data-mile="59800" data-make="mercedes" data-model="gle"
+            data-trim="basic" data-price="38878">
             <div class="card__item-block">
               <img src="img/gle.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -285,8 +280,8 @@
             </div>
           </div>
 
-          <div class="card card__item car__sold" data-year="2019" data-mile="99000"
-          data-make="toyota"  data-model="venza" data-trim="awdxle" data-price="18620">
+          <div class="card card__item car__sold" data-year="2019" data-mile="99000" data-make="toyota"
+            data-model="venza" data-trim="awdxle" data-price="18620">
             <div class="card__item-block card__wrap-sold">
               <img src="img/venza-sold.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -306,8 +301,8 @@
             </div>
           </div>
 
-          <div class="card card__item" data-year="2016" data-mile="86000"
-          data-make="lexus" data-model="rx350" data-trim="fsport" data-price="34888">
+          <div class="card card__item" data-year="2016" data-mile="86000" data-make="lexus" data-model="rx350"
+            data-trim="fsport" data-price="34888">
             <div class="card__item-block card__wrap-new">
               <img src="img/rx-350-sport.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -327,8 +322,8 @@
             </div>
           </div>
 
-          <div class="card card__item" data-year="2019" data-mile="19855"
-          data-make="volkswagen" data-model="tiguan" data-trim="basic" data-price="34888">
+          <div class="card card__item" data-year="2019" data-mile="19855" data-make="volkswagen" data-model="tiguan"
+            data-trim="basic" data-price="34888">
             <div class="card__item-block">
               <img src="img/tiguan.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -348,8 +343,8 @@
             </div>
           </div>
 
-          <div class="card card__item" data-year="2014" data-mile="69000"
-          data-make="toyota" data-model="highlander" data-trim="xle" data-price="27875">
+          <div class="card card__item" data-year="2014" data-mile="69000" data-make="toyota" data-model="highlander"
+            data-trim="xle" data-price="27875">
             <div class="card__item-block">
               <img src="img/highlander-xle.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -369,8 +364,8 @@
             </div>
           </div>
 
-          <div class="card card__item" data-year="2017" data-mile="39850"
-          data-make="lexus" data-model="rx350" data-trim="luxury" data-price="38775">
+          <div class="card card__item" data-year="2017" data-mile="39850" data-make="lexus" data-model="rx350"
+            data-trim="luxury" data-price="38775">
             <div class="card__item-block">
               <img src="img/highlander-xle.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -390,8 +385,8 @@
             </div>
           </div>
 
-          <div class="card card__item" data-year="2016" data-mile="104000"
-          data-make="toyota" data-model="highlander" data-trim="leawd" data-price="23728">
+          <div class="card card__item" data-year="2016" data-mile="104000" data-make="toyota" data-model="highlander"
+            data-trim="leawd" data-price="23728">
             <div class="card__item-block">
               <img src="img/highlander-xle.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -411,8 +406,8 @@
             </div>
           </div>
 
-          <div class="card card__item" data-year="2019" data-mile="19855"
-          data-make="volkswagen" data-model="tiguan" data-trim="basic"  data-price="34888">
+          <div class="card card__item" data-year="2019" data-mile="19855" data-make="volkswagen" data-model="tiguan"
+            data-trim="basic" data-price="34888">
             <div class="card__item-block card__wrap-new">
               <img src="img/tiguan.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -432,8 +427,8 @@
             </div>
           </div>
 
-          <div class="card card__item" data-year="2014" data-mile="69000"
-          data-make="toyota"  data-model="highlander" data-trim="xle" data-price="27875">
+          <div class="card card__item" data-year="2014" data-mile="69000" data-make="toyota" data-model="highlander"
+            data-trim="xle" data-price="27875">
             <div class="card__item-block">
               <img src="img/highlander-xle.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -453,8 +448,8 @@
             </div>
           </div>
 
-          <div class="card card__item" data-year="2017" data-mile="39850"
-          data-make="lexus" data-model="rx350" data-trim="luxury" data-price="38775">
+          <div class="card card__item" data-year="2017" data-mile="39850" data-make="lexus" data-model="rx350"
+            data-trim="luxury" data-price="38775">
             <div class="card__item-block">
               <img src="img/highlander-xle.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -474,8 +469,8 @@
             </div>
           </div>
 
-          <div class="card card__item" data-year="2016" data-mile="104000"
-          data-make="toyota" data-model="highlander" data-trim="leawd" data-price="23728">
+          <div class="card card__item" data-year="2016" data-mile="104000" data-make="toyota" data-model="highlander"
+            data-trim="leawd" data-price="23728">
             <div class="card__item-block">
               <img src="img/highlander-xle.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -495,8 +490,8 @@
             </div>
           </div>
 
-          <div class="card card__item" data-year="2017" data-mile="95000"
-          data-make="hyundai" data-model="elantra" data-trim="basic" data-price="11788">
+          <div class="card card__item" data-year="2017" data-mile="95000" data-make="hyundai" data-model="elantra"
+            data-trim="basic" data-price="11788">
             <div class="card__item-block">
               <img src="img/elantra.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -516,8 +511,8 @@
             </div>
           </div>
 
-          <div class="card card__item" data-year="2016" data-mile="59800"
-          data-make="mercedes" data-model="gle" data-trim="basic" data-price="38878">
+          <div class="card card__item" data-year="2016" data-mile="59800" data-make="mercedes" data-model="gle"
+            data-trim="basic" data-price="38878">
             <div class="card__item-block">
               <img src="img/gle.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -537,8 +532,8 @@
             </div>
           </div>
 
-          <div class="card card__item" data-year="2015" data-mile="99000"
-          data-make="toyota" data-model="venza" data-trim="awdxle" data-price="18620">
+          <div class="card card__item" data-year="2015" data-mile="99000" data-make="toyota" data-model="venza"
+            data-trim="awdxle" data-price="18620">
             <div class="card__item-block">
               <img src="img/venza.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -558,8 +553,8 @@
             </div>
           </div>
 
-          <div class="card card__item" data-year="2016" data-mile="86000"
-          data-make="lexus"  data-model="rx350" data-trim="fsport" data-price="34888">
+          <div class="card card__item" data-year="2016" data-mile="86000" data-make="lexus" data-model="rx350"
+            data-trim="fsport" data-price="34888">
             <div class="card__item-block card__wrap-new">
               <img src="img/rx-350-sport.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -579,8 +574,8 @@
             </div>
           </div>
 
-          <div class="card card__item" data-year="2019" data-mile="19855"
-          data-make="volkswagen" data-model="tiguan" data-trim="basic" data-price="34888">
+          <div class="card card__item" data-year="2019" data-mile="19855" data-make="volkswagen" data-model="tiguan"
+            data-trim="basic" data-price="34888">
             <div class="card__item-block">
               <img src="img/tiguan.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -600,8 +595,8 @@
             </div>
           </div>
 
-          <div class="card card__item" data-year="2014" data-mile="69000"
-          data-make="toyota"  data-model="highlander" data-trim="xle" data-price="27875">
+          <div class="card card__item" data-year="2014" data-mile="69000" data-make="toyota" data-model="highlander"
+            data-trim="xle" data-price="27875">
             <div class="card__item-block">
               <img src="img/highlander-xle.png" class="img-fluid card__item-img" alt="car10">
             </div>
@@ -637,7 +632,7 @@
           </p>
         </div>
 
-        <form class="col-sm-12 col-md-7 offset-md-1 mt-xs-3 mt-sm-3 subscribe__form" action="" method="POST">
+        <form class="col-sm-12 col-md-7 offset-md-1 mt-xs-3 mt-sm-3 subscribe__form" action="#" method="POST">
           <input type="email" class="subscribe__mail input" placeholder="Enter your email" required id="input">
 
           <button type="submit" class="btn subscribe__button">
@@ -841,5 +836,11 @@
     </div>
   </footer>
 </body>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous">
+</script>
+<script defer src="js/script.js"></script>
 
 </html>
